# MinioFileHub

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/api/: auth.py  files.py
app/api/v1/: __init__.py  auth.py  files.py
app/api/v1/schemas/: file.py
app/config/: settings.py
app/schemas/: download_stats.py  minio_objects.py
app/services/: db_service.py  minio_service.py
app/services/mysql/: mysql_service.py
app/services/mysql/models/: minio_objects.py
memo/: MinIO服务器特殊字段获取.md
