[project]
name = "minio-file-hub"
version = "0.1.0"
requires-python = ">=3.12"
description = "MinIO File Hub Project"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.135.2",
    "minio>=7.2.20",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
